[project]
name = "beamspy"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Mihai Hawkin", "email" = "mpomarlan@yahoo.co.uk" }]
keywords = ["logits processor", "sequence generation", "beam search"]
classifiers = [
    "Development Status :: 0 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/mpomarlan/beamspy/README.md" }
dependencies = ["torch", "transformers"]
#dynamic = ["version", "description"]
dynamic = ["version"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "beamspy.__version__"}
#description = {attr = "beamspy.__description__"}

